--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "pino-pretty": "^13.1.1",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.42.0"
   }
 }
