--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,10 @@
 name: CI
 
 on:
-  pull_request:
-    branches: [main]
+  push:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     strategy:
