--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Bun 
         uses: oven-sh/setup-bun@v2
 
       - name: Install dependencies
         run: cd frontend
+
+      - name: Test where I am
+        run: pwd
 
       - name: Install dependencies
         run: bun install
