--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,24 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Use Bun 
+        uses: oven-sh/setup-bun@v2
+
+      - name: Install dependencies
+        run: bun install
+        working-directory: ./frontend
+
+      - name: Run tests
+        run: bun run test
+        working-directory: ./frontend
+  
+  build-fe:
+    runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [22.x]
@@ -19,14 +37,41 @@ jobs:
       - name: Use Bun 
         uses: oven-sh/setup-bun@v2
 
-      - name: Test where I am
-        run: pwd
-        working-directory: ./frontend
-
       - name: Install dependencies
         run: bun install
         working-directory: ./frontend
 
-      - name: Run tests
-        run: bun run test
-        working-directory: ./frontend
+      - name: Run build
+        run: bun run build
+        working-directory: ./frontend  
+
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: frontend/dist
+
+  deploy-fe:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: frontend/dist
+
+      - name: Configure AWS credentials with Github Secrets
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Upload Build Artifacts to S3
+        run: aws s3 sync ./frontend/dist s3://${{ secrets.S3_BUCKET }}
+
+      - name: Invalidate Cloudfront Cache
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+
