--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
 
   deploy-fe:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-fe
 
     steps:
       - name: Download Build Artifacts
