change context path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          context: server
+          context: ./server
           tags: user/bitcoin-guesser:latest
 
