--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,6 @@ jobs:
           file: .docker/Dockerfile.bun
           context: ./server
           build-args: |
-            WORKDIR_ENV: /app
+            WORKDIR_ENV=/app
           tags: user/bitcoin-guesser:latest
 
