build for arm64 to be able to run on t4g

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,6 +99,7 @@ jobs:
           push: true
           file: .docker/Dockerfile.bun
           context: ./server
+          platforms: linux/arm64
           build-args: |
             WORKDIR_ENV=/app
           tags: patriksimms1/bitcoin-guesser:${{ github.sha }}
