--- a/infra/package.json
+++ b/infra/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
         "@pulumi/aws": "^7.0.0",
+        "@pulumi/awsx": "^3.0.0",
         "@pulumi/synced-folder": "^0.11.1",
         "@pulumi/pulumi": "^3.113.0"
     }
