--- a/.docker/Dockerfile.bun
+++ b/.docker/Dockerfile.bun
@@ -29,4 +29,4 @@ COPY package.json .
 RUN mkdir -m 0777 -p ${WORKDIR_ENV}/.cache
 ENV NODE_ENV production
 
-CMD [ "bun", "--preload", "src/index.ts" ]
+CMD [ "bun", "src/index.ts" ]
