--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: bun run build
         working-directory: ./frontend  
         env:
-          VITE_BITCOIN_GUESSER_BASE: http://lb-982e9fe-1101590496.eu-central-1.elb.amazonaws.com:4099
+          VITE_BITCOIN_GUESSER_BASE: http://lb-982e9fe-1101590496.eu-central-1.elb.amazonaws.com
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
