update dockerfile, add cloudfront for https for backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - postgres
     ports:
       - "4099:4099"
-    entrypoint: "bun src/index.ts"
+    entrypoint: "bun run start:prod"
 
   frontend:
     build:
