--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "dev": "bun run src/index.ts",
     "migration:generate": "bunx drizzle-kit generate --name $1",
     "migration:run": "bun --bun run drizzle-kit migrate",
+    "start:prod": "bun --bun run drizzle-kit migrate && bun src/index.ts",
     "lint": "eslint src",
     "tsc": "tsc"
   },
