--- a/infra/Pulumi.infra.yaml
+++ b/infra/Pulumi.infra.yaml
@@ -1,7 +1,9 @@
 config:
   aws:region: eu-central-1
+  # only applicable for Patrik Simms
   aws:profile: private
   bitcoin-guesser-infra:dbPassword:
+  # https://www.pulumi.com/docs/iac/concepts/secrets/#committing-configuration-to-source-control
     secure: AAABAJMnVGQd53v2URYs71pfWFBP+HwpjYJ7LGQns62nW9EpGfCJRH4TYDCx1UIinV+Blhzz7dcOtQ==
   bitcoin-guesser-infra:dockerImage: patriksimms1/bitcoin-guesser:b2b391f069c2bab31c965cb8e45f0bcb9eecc8f1
 
